--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -1,1 +1,9 @@
 <h2>Available drones</h2>
+  {{#each drones}}
+    <div>
+      <p><strong>Name:</strong> {{ this.name }}</p>
+      <p><strong>Propellers:</strong> {{ this.propellers }}</p>
+      <p><strong>Max Speed:</strong> {{ this.maxSpeed }}</p>
+    </div>
+  {{/each}}
+  
