--- a/views/drones/create-form.hbs
+++ b/views/drones/create-form.hbs
@@ -1,1 +1,16 @@
 <h2>Create a new drone</h2>
+
+<form method="POST" action="/drones/create">
+
+  <label>Name</label>
+  <input type="text" name="name" />
+
+  <label>Propellers</label>
+  <input type="number" name="propellers" />
+
+  <label>Max Speed</label>
+  <input type="number" name="maxSpeed" />
+
+  <button type="submit">Create the new drone </button>
+
+</form>
