--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -4,6 +4,6 @@
       <p><strong>Name:</strong> {{ this.name }}</p>
       <p><strong>Propellers:</strong> {{ this.propellers }}</p>
       <p><strong>Max Speed:</strong> {{ this.maxSpeed }}</p>
+      <a href="/drones/{{this._id}}/edit">Edit</a>
     </div>
   {{/each}}
-  
