--- a/views/drones/update-form.hbs
+++ b/views/drones/update-form.hbs
@@ -1,1 +1,16 @@
 <h2>Update the drone</h2>
+
+<form method="POST" action="/drones/{{ _id }}/edit">
+
+  <label>Name</label>
+  <input type="text" name="name" value="{{ name }}"/>
+
+  <label>Propellers</label>
+  <input type="number" name="propellers" value="{{ propellers }}"/>
+
+  <label>Max Speed</label>
+  <input type="number" name="maxSpeed" value="{{ maxSpeed }}"/>
+
+  <button type="submit">Save changes</button>
+
+</form>
