--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -1,9 +1,12 @@
 <h2>Available drones</h2>
-  {{#each drones}}
-    <div>
-      <p><strong>Name:</strong> {{ this.name }}</p>
-      <p><strong>Propellers:</strong> {{ this.propellers }}</p>
-      <p><strong>Max Speed:</strong> {{ this.maxSpeed }}</p>
-      <a href="/drones/{{this._id}}/edit">Edit</a>
-    </div>
-  {{/each}}
+{{#each drones}}
+  <div>
+    <p><strong>Name:</strong> {{this.name}}</p>
+    <p><strong>Propellers:</strong> {{this.propellers}}</p>
+    <p><strong>Max Speed:</strong> {{this.maxSpeed}}</p>
+    <a href="/drones/{{this._id}}/edit">Edit</a>
+    <form method="POST" action="/drones/{{this._id}}/delete">
+      <button type="submit">Delete</button>
+    </form>
+  </div>
+{{/each}}
