--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,7 +10,18 @@
 
   <body>
 
-    <a href="/drones">See all drones</a>
+    <nav>
+      <ul>
+        <li class="align-left"><a href="/"><img
+              width="50px"
+              src="/images/drone.png"
+              alt=""
+            /></a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/drones/create">Create a new drone</a></li>
+        <li><a href="/drones">Drones</a></li>
+      </ul>
+    </nav>
 
     {{{body}}}
 
