--- a/views/drones/create-form.hbs
+++ b/views/drones/create-form.hbs
@@ -1,5 +1,6 @@
 <h2>Create a new drone</h2>
 
+<div id="creation-form"></div>
 <form method="POST" action="/drones/create">
 
   <label>Name</label>
@@ -14,3 +15,4 @@
   <button type="submit">Create the new drone</button>
 
 </form>
+</div>
