--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -1,12 +1,15 @@
 <h2>Available drones</h2>
 {{#each drones}}
-  <div>
+  <div id="drone-card">
     <p><strong>Name:</strong> {{this.name}}</p>
     <p><strong>Propellers:</strong> {{this.propellers}}</p>
     <p><strong>Max Speed:</strong> {{this.maxSpeed}}</p>
-    <a href="/drones/{{this._id}}/edit">Edit</a>
+    
+    <div class="action-btns">
+    <a class="action-btn" href="/drones/{{this._id}}/edit">Edit</a>
     <form method="POST" action="/drones/{{this._id}}/delete">
       <button type="submit">Delete</button>
     </form>
+        </div>
   </div>
 {{/each}}
